# hdav

./: .gitignore  CHANGELOG.md  README.md  cabal.project.freeze  hdav.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Hdav.hs
src/Data/DAV/: Class.hs  Util.hs  Value.hs
src/Network/DAV/: Cal.hs  Card.hs  Util.hs
test/: Samples.hs
test/Test/Data/DAV/: UtilSpec.hs  ValueSpec.hs
