cabal-version:       2.4
name:                hdav
version:             0.1
synopsis:            WebDAV/CardDAV/CalDAV library and cli tool(s)
description:         See README for more info
homepage:            https://github.com/fisx/hdav
bug-reports:         https://github.com/fisx/hdav/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          Matthias Fischmann <mf@zerobuzz.net>
copyright:           2021 Matthias Fischmann
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/fisx/hdav.git

common common-options
  build-depends:       base

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveFunctor
                       DeriveGeneric
                       DeriveLift
                       DeriveTraversable
                       DerivingStrategies
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       OverloadedStrings
                       PackageImports
                       PatternSynonyms
                       PolyKinds
                       QuasiQuotes
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeFamilyDependencies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hdav

executable hdav
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , http-client
                     , lens
                     , process
                     , string-conversions
                     , text
                     , wreq
                     , xml-conduit
                     , xml-hamlet
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
