cabal-version:   2.4
name:            hdav
version:         0.1
license:         AGPL-3.0-only
license-file:    LICENSE
copyright:       2022 Matthias Fischmann
maintainer:      Matthias Fischmann <mf@zerobuzz.net>
author:          Matthias Fischmann
tested-with:     ghc ==8.10.7
homepage:        https://github.com/fisx/hdav
bug-reports:     https://github.com/fisx/hdav/issues
synopsis:        WebDAV/CardDAV/CalDAV library and cli tool(s)
description:     See README for more info
category:        Web
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/fisx/hdav.git

library
    exposed-modules:
        Data.DAV.Class
        Data.DAV.Util
        Data.DAV.Value
        Network.DAV.Cal
        Network.DAV.Card
        Network.DAV.Util

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes ApplicativeDo BangPatterns ConstraintKinds
        DataKinds DefaultSignatures DeriveFunctor DeriveGeneric DeriveLift
        DeriveTraversable DerivingStrategies EmptyCase FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings
        PackageImports PatternSynonyms PolyKinds QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        TypeFamilyDependencies TypeOperators UndecidableInstances
        ViewPatterns

    ghc-options:
        -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    build-depends:
        base >=4.14.1.0 && <4.15,
        bytestring >=0.8 && <0.11,
        case-insensitive >=1.2.0.0 && <1.3,
        containers >=0.6.2.1 && <0.7,
        directory >=1.3.6.0 && <1.4,
        filepath >=1.4.2.1 && <1.5,
        http-client >=0.6.4.1 && <0.8,
        lens >=4.19.2 && <4.20,
        megaparsec >=8.0.0 && <10,
        mtl >=2.1 && <2.3,
        process >=1.6.9.0 && <1.7,
        QuickCheck >=2.10 && <2.15,
        string-conversions >=0.4.0.1 && <0.5,
        temporary >=1.0 && <1.4,
        text >=1.2.4.1 && <1.3,
        time >=1.9 && <1.10,
        uri-bytestring >=0.3.3.0 && <0.4,
        uuid >=1.3.0 && <1.4,
        wreq >=0.5.3.2 && <0.6,
        xml-conduit >=1.8.0.1 && <1.10,
        xml-hamlet >=0.5.0.1 && <0.6

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

executable hdav
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes ApplicativeDo BangPatterns ConstraintKinds
        DataKinds DefaultSignatures DeriveFunctor DeriveGeneric DeriveLift
        DeriveTraversable DerivingStrategies EmptyCase FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings
        PackageImports PatternSynonyms PolyKinds QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        TypeFamilyDependencies TypeOperators UndecidableInstances
        ViewPatterns

    ghc-options:
        -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.14.1.0 && <4.15,
        hdav -any,
        optparse-applicative >=0.16.1.0 && <0.17,
        string-conversions >=0.4.0.1 && <0.5,
        text >=1.2.4.1 && <1.3,
        uri-bytestring >=0.3.3.0 && <0.4

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Samples
      Test.Data.DAV.ValueSpec
      Test.Data.DAV.UtilSpec
  hs-source-dirs:
      test
  default-extensions:
        AllowAmbiguousTypes ApplicativeDo BangPatterns ConstraintKinds
        DataKinds DefaultSignatures DeriveFunctor DeriveGeneric DeriveLift
        DeriveTraversable DerivingStrategies EmptyCase FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase
        MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings
        PackageImports PatternSynonyms PolyKinds QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        TypeFamilyDependencies TypeOperators UndecidableInstances
        ViewPatterns
  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -j -Wno-redundant-constraints -Werror -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
        base,
        containers,
        hdav,
        hspec,
        lens,
        megaparsec,
        QuickCheck,
        string-conversions,
        text,
        time,
        uuid
  default-language: Haskell2010
